- New: Add hidden option MAIN_LOGOUT_GOTO_URL to set the exit url after
       a logout.
- New: For germany, we invert order of address.
- New: Add hidden option MAIN_SERVICES_ARE_ECOMMERCE_200238EC.
- New: Support NPR in customer product prices.
- New: Add more volume units (ounce, gallon, inch, feet, ...)
- New: Delivery date accepts hours and minutes.
- Perf: Avoid reading database to determine country code after each
        page call.
- Fix: Better Postgresql compatibility.
- Fix: Box order is saved when moved.
- Fix: Database name can contains "-" characters.
- Fix: In coloring negative amounts.

For developers:
- New: Add jquery by default.
- New: Removed PWC libraries.
- New: Add first Selenium GUI tests.
- New: Enhance a lot of internal function to build external modules
       more easily.
- Qual: Mutualize some duplicate code.
- Qual: Renamed some fields into database to be more internationnal.
- Qual: Removed deprecated code.


***** ChangeLog for 2.9 compared to 2.8 *****

For users:
- New: POS module allow to choose which warehouse to use.
- New: Support "Department/State" field on company setup, contact, 
       bank account and members card.
- New: Can reopen a refused/canceled supplier order.
- New: Add Gant diagramm on project module.
- New: Add a new mode for automatic stock increase: Can be increased
       on dispatching of products from a supplier order receipt.
- New: Can set a past delay to limit calendar export.
- New: Can attach files on emailing campaigns.
- New: Add statistics on trips and expenses module.
- New: Can reopen a closed customer order.
- New: Add module externalsite to add a web site/tools inside 
       menu and a Dolibarr frame.
- New: Can link trips and fees to a project.
- New: Add civility title in foundation module.
- New: Can set accountancy code for product (buy and sell).
- New: Can filter third parties lists on categories.
- New: Can filter products and services lists on categories.