@@ -104,6 +104,7 @@ UserWithApproveOrderGrant=Users granted with "approve orders" permission.
 PaymentOrderRef=Payment of order %s
 CloneOrder=Clone order
 ConfirmCloneOrder=Are you sure you want to clone this order <b>%s</b> ?
+DispatchSupplierOrder=Receiving supplier order %s
 ##### Types de contacts #####
 TypeContact_commande_internal_SALESREPFOLL=Representative following-up customer order
 TypeContact_commande_internal_SHIPPING=Representative following-up shipping
@@ -131,7 +132,6 @@ OrderSource5=Commercial
 OrderSource6=Store
 QtyOrdered=Qty ordered
 AddDeliveryCostLine=Add a delivery cost line indicating the weight of the order
-
 
 # Documents models
 PDFEinsteinDescription=A complete order model (logo...)
